--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,13 @@
-<div class="row">
+<div class="row mb-2">
   <div class="col-md-6 offset-3">
     <h1>
       <%= @user.username %>
     </h1>
 
-    <ul class="nav nav-pills nav-justified">
+
+    <ul class="nav nav-tabs nav-justified mb-1">
       <li class="nav-item">
-        <%= link_to "Posts", user_path(@user.username), class: "nav-link" %>
+        <%= link_to "Posts", user_path(@user.username), class: "nav-link active" %>
       </li>
       <li class="nav-item">
         <%= link_to "Liked photos", liked_path(@user.username), class: "nav-link" %>
