Changed User Styling, Added Follow Requests and Connected User Modals

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,8 @@
       <%= @user.username %>
     </h1>
 
+    <%= render 'users/user' %>
+
 
     <ul class="nav nav-tabs nav-justified mb-1">
       <li class="nav-item">
